<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.examprep.aptknackonline.Activities.TestActivity">

    <TextView
        android:id="@+id/questionTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="TextView"
        android:textSize="26dp" />

    <TextView
        android:id="@+id/maxmarksTtextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/questionTypeTextView"
        android:layout_alignParentEnd="true"
        android:text="TextView"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/questionTypeTextView"
        android:layout_marginTop="18dp"
        android:text="TextView"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/questionTextView"
        android:text="TextView"
        android:textSize="20dp" />

    <WebView
        android:id="@+id/questionWebView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/timerTextView" />

    <RadioGroup
        android:id="@+id/optionRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/questionWebView"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/optionARadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="A"
            android:textSize="20dp"
            android:layout_margin="10dp" />

        <RadioButton
            android:id="@+id/optionBRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="B"
            android:textSize="20dp"
            android:layout_margin="10dp" />

        <RadioButton
            android:id="@+id/optionCradioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="C"
            android:textSize="20dp"
            android:layout_margin="10dp" />

        <RadioButton
            android:id="@+id/optionDRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="D"
            android:textSize="20dp"
            android:layout_margin="10dp" />
    </RadioGroup>

    <Button
        android:id="@+id/prevButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="Prev" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="Next" />
</RelativeLayout>
