<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bnn"
    tools:context="com.example.examprep.aptknackonline.Activities.TestHomeActivity">

    <ImageButton
        android:id="@+id/aptituteTestImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="96dp"
        android:background="#00000000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/apttest" />

    <ImageButton
        android:id="@+id/verbalTestImageButton"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:background="#00000000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aptituteTestImageButton"
        app:srcCompat="@drawable/verbal" />

    <ImageButton
        android:id="@+id/reasoningTestImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="#00000000"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verbalTestImageButton"
        app:srcCompat="@drawable/logical" />

    <ImageButton
        android:id="@+id/selfAssesmentImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="#00000000"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reasoningTestImageButton"
        app:srcCompat="@drawable/selfassesment" />
</android.support.constraint.ConstraintLayout>
