...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/testImageButton"
        android:layout_width="281dp"
        android:layout_height="97dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="188dp"
        android:background="#00000000"
        app:layout_constraintLeft_toLeftOf="parent"
...
